# deep-thought

./: .dockerignore  .gitignore  .pyspelling.yaml  .wordlist  .yamllint  API.md  CONTRIBUTING.md  Containerfile  Dockerfile  Makefile  README.md  build.sh  deep_thought.db  pyproject.toml  requirements-devel.txt  requirements.txt  requirements.txt.bak
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: issue_template.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: api-test.yml  deploy-openshift.yml  deploy-to-openshift.yml  linting.yml  unittest.yml
deployment/: README.md  configmap.yaml  convert-dotenv-to-k8s-yaml.sh  deploy.sh  deployment.yaml  entrypoint.sh  google-application-credentials.yaml  route.yaml  secrets.yaml  service.yaml
deployment/base/: configMap.yaml  secrets.yaml
deployment_k8s/base/: kustomization.yaml
deployment_old/: README.md  build.sh  deployment.yaml  route.yaml  service.yaml
deployment_old/scripts/: k8s-edit.sh  k8s-encrypy.sh
docs/: API.md  CONTRIBUTING.md
k8s/: Dockerfile  deep-thought-template.yaml
k8s/base/: google-application-credentials.yaml
k8s/dev-spaces-setup/: README.md  checluster.yaml  install-script.sh
specs/: openapi-v1.json  openapi-v2.json  openapi.json  openapi_v1.json
src/: .env.config.example  .env.example  .env.secrets.example  app.py  config.py  embeddings.py  hosted_llm.py  logging_setup.py  main.py
src/deployment/: DEPLOYMENT_GUIDE.md  configmap.yaml  deep-thought-json.secret.yaml  (+2 more)
tests/: test_app.py  test_embeddings.py  test_main.py
(+24 files in other folders)
